UI: fixed rating (stars flickering)

--- a/nodeshot/ui/default/static/ui/fontello/css/nodeshot.css
+++ b/nodeshot/ui/default/static/ui/fontello/css/nodeshot.css
@@ -78,9 +78,9 @@
 .icon-elevation-profile:before { content: '\e821'; } /* '' */
 .icon-ruler:before { content: '\e822'; } /* '' */
 .icon-select-area:before { content: '\e811'; } /* '' */
-.icon-star:before { content: '\e812'; } /* '' */
+.icon-star-full:before { content: '\e812'; } /* '' */
 .icon-star-empty:before { content: '\e813'; } /* '' */
-.icon-star-half-alt:before { content: '\e814'; } /* '' */
+.icon-star-half:before { content: '\e814'; } /* '' */
 .icon-thumbs-up:before { content: '\e823'; } /* '' */
 .icon-thumbs-down:before { content: '\e824'; } /* '' */
 .icon-github:before { content: '\e825'; } /* '' */
